# DRF_OTP_Diploma

./: .env-template  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
users/management/commands/: csu.py  cu.py  du.py
users/migrations/: 0001_initial.py  0002_alter_customuser_activated_invite_code.py
